--- a/configs/beaglebone-black_defconfig
+++ b/configs/beaglebone-black_defconfig
@@ -70,8 +70,10 @@ BR2_TARGET_ROOTFS_TAR_LZMA=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/kubos/uboot"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="1.5"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/SkCubeSat/kubos-uboot"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="1.0"
+# BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
+# BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="file:///home/vagrant/kubos-linux/buildroot-2019.02.2/dl/kubos-uboot.tar.gz"
 BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="${BR2_EXTERNAL_KUBOS_LINUX_PATH}/board/kubos/beaglebone-black/beaglebone-black_config"
 BR2_TARGET_UBOOT_FORMAT_IMG=y
